<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="details_title">Details</string>
    <string name="details_back">Back</string>
    <string name="details_error_message">Unable to load breed details.</string>
    <string name="details_retry">Retry</string>
    <string name="details_origin_label">Origin</string>
    <string name="details_temperament_label">Temperament</string>
    <string name="details_description_label">Description</string>
    <string name="details_unknown">Unknown</string>
    <string name="breed_image_content_description">%1$s cat</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="details_favorite_error">Failed to update favorite. Please try again.</string>
</resources>
